<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Egg Timer</string>
    
    <!-- MainActivity Strings -->
    <string name="main_label">Egg Timer</string>
    
    <string name="available_timers">Available Timers</string>
    <string name="running_timers">Running Timers</string>
    
    
    <!-- AddTimerActivity Strings -->
    <string name="add_timer_label">Add Timer</string>
    
    <string name="timer_name">Timer Name</string>
    <string name="timer_duration">Timer Duration</string>
    <string name="timer_minutes">Minutes</string>
    <string name="timer_seconds">Seconds</string>
    
    <string name="button_confirm_creation_timer">Confirm</string>
    <string name="button_cancel_creation_timer">Cancel</string>
    
    
    <!-- SelectedTimerActivity Strings -->
    <string name="selected_timer_label">Selected Timer</string>
    
    <string name="button_start_timer">Start</string>
    <string name="button_pause_timer">Pause</string>
    <string name="button_stop_timer">Stop</string>
    
    
    <!-- Options Menu Strings -->
    <string name="add_timer">Add Timer</string>
    <string name="edit_timer">Edit Timer</string>
    <string name="delete_timer">Delete Timer</string>
    <string name="action_settings">Settings</string>
    <string name="vibrate_permisstion">vibrate_permisstion</string>
    
    

</resources>
